packages/ipp/src/ImagProc/Ipp/ptr_adapt.h

int ippiFilterBox_32f_C1Rx(float*, int, float*, int, void*, void*, void*);
int ippiFilterSobelVert_32f_C1Rx(float*, int, float*, int, void*);
int ippiFilterSobelHoriz_32f_C1Rx(float*, int, float*, int, void*);
int ippiFilterLaplace_32f_C1Rx(float*, int, float*, int, void*, int);
int ippiFilterGauss_8u_C1Rx(unsigned char*, int, unsigned char*, int, void*, int);
int ippiFilterGauss_32f_C1Rx(float*, int, float*, int, void*, int);
int ippiFilterHipass_8u_C1Rx(unsigned char*, int, unsigned char*, int, void*, int);
int ippiFilter_8u_C1Rx(unsigned char*, int, unsigned char*, int, void*, int*, void*, void*, int);
int ippiFilter_32f_C1Rx(float*, int, float*, int, void*, float*, void*, void*);
int ippiFilterColumn_8u_C1Rx(unsigned char*, int, unsigned char*, int, void*, int*, int, int, int);
int ippiFilterColumn_32f_C1Rx(float*, int, float*, int, void*, float*, int, int);
int ippiFilterRow_8u_C1Rx(unsigned char*, int, unsigned char*, int, void*, int*, int, int, int);
int ippiFilterRow_32f_C1Rx(float*, int, float*, int, void*, float*, int, int);
int ippiCrossCorrValid_NormLevel_32f_C1Rx(float*, int, void*, float*, int, void*, float*, int);
int ippiCrossCorrValid_NormLevel_8u32f_C1Rx(unsigned char*, int, void*, unsigned char*, int, void*, float*, int);
int ippiCrossCorrValid_NormLevel_8u32f_C3Rx(unsigned char*, int, void*, unsigned char*, int, void*, float*, int);
int ippiSqrDistanceValid_Norm_32f_C1Rx(float*, int, void*, float*, int, void*, float*, int);
int ippiSqrDistanceValid_Norm_8u32f_C1Rx(unsigned char*, int, void*, unsigned char*, int, void*, float*, int);
int ippiSqrDistanceValid_Norm_8u32f_C3Rx(unsigned char*, int, void*, unsigned char*, int, void*, float*, int);
int ippiThreshold_Val_8u_C1Rx(unsigned char*, int, unsigned char*, int, void*, unsigned char, unsigned char, int);
int ippiThreshold_Val_32f_C1Rx(float*, int, float*, int, void*, float, float, int);
int ippiComputeThreshold_Otsu_8u_C1Rx(unsigned char*, int, void*, unsigned char*);
int ippiCopy_8u_C3C1Rx(unsigned char*, int, unsigned char*, int, void*);
int ippiCopy_8u_C1C3Rx(unsigned char*, int, unsigned char*, int, void*);
int ippiCopy_8u_C1Rx(unsigned char*, int, unsigned char*, int, void*);
int ippiCopy_8u_C3Rx(unsigned char*, int, unsigned char*, int, void*);
int ippiCopy_8u_C1MRx(unsigned char*, int, unsigned char*, int, void*, unsigned char*, int);
int ippiCopy_32f_C1Rx(float*, int, float*, int, void*);