packages/ipp/src/ImagProc/Ipp/Adapt.hs


foreign import ccall "ippiFilterBox_32f_C1Rx"
    ippiFilterBox_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Ptr IppiSize -> Ptr IppiPoint -> IO CInt
ippiFilterBox_32f_C1R pSrc srcStep pDst dstStep dstRoiSize maskSize anchor = do
    pdstRoiSize <- new dstRoiSize
    pmaskSize <- new maskSize
    panchor <- new anchor
    r <- ippiFilterBox_32f_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pmaskSize panchor
    free pdstRoiSize
    free pmaskSize
    free panchor
    return r

foreign import ccall "ippiFilterSobelVert_32f_C1Rx"
    ippiFilterSobelVert_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO CInt
ippiFilterSobelVert_32f_C1R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiFilterSobelVert_32f_C1Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiFilterSobelHoriz_32f_C1Rx"
    ippiFilterSobelHoriz_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO CInt
ippiFilterSobelHoriz_32f_C1R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiFilterSobelHoriz_32f_C1Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiFilterLaplace_32f_C1Rx"
    ippiFilterLaplace_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> CInt -> IO CInt
ippiFilterLaplace_32f_C1R pSrc srcStep pDst dstStep roiSize mask = do
    proiSize <- new roiSize
    r <- ippiFilterLaplace_32f_C1Rx pSrc srcStep pDst dstStep proiSize mask
    free proiSize
    return r

foreign import ccall "ippiFilterGauss_8u_C1Rx"
    ippiFilterGauss_8u_C1Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> CInt -> IO CInt
ippiFilterGauss_8u_C1R pSrc srcStep pDst dstStep roiSize mask = do
    proiSize <- new roiSize
    r <- ippiFilterGauss_8u_C1Rx pSrc srcStep pDst dstStep proiSize mask
    free proiSize
    return r

foreign import ccall "ippiFilterGauss_32f_C1Rx"
    ippiFilterGauss_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> CInt -> IO CInt
ippiFilterGauss_32f_C1R pSrc srcStep pDst dstStep roiSize mask = do
    proiSize <- new roiSize
    r <- ippiFilterGauss_32f_C1Rx pSrc srcStep pDst dstStep proiSize mask
    free proiSize
    return r

foreign import ccall "ippiFilterHipass_8u_C1Rx"
    ippiFilterHipass_8u_C1Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> CInt -> IO CInt
ippiFilterHipass_8u_C1R pSrc srcStep pDst dstStep roiSize mask = do
    proiSize <- new roiSize
    r <- ippiFilterHipass_8u_C1Rx pSrc srcStep pDst dstStep proiSize mask
    free proiSize
    return r

foreign import ccall "ippiFilter_8u_C1Rx"
    ippiFilter_8u_C1Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> Ptr Int32 -> Ptr IppiSize -> Ptr IppiPoint -> Int -> IO CInt
ippiFilter_8u_C1R pSrc srcStep pDst dstStep dstRoiSize pKernel kernelSize anchor divisor = do
    pdstRoiSize <- new dstRoiSize
    pkernelSize <- new kernelSize
    panchor <- new anchor
    r <- ippiFilter_8u_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pKernel pkernelSize panchor divisor
    free pdstRoiSize
    free pkernelSize
    free panchor
    return r

foreign import ccall "ippiFilter_32f_C1Rx"
    ippiFilter_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Ptr Float -> Ptr IppiSize -> Ptr IppiPoint -> IO CInt
ippiFilter_32f_C1R pSrc srcStep pDst dstStep dstRoiSize pKernel kernelSize anchor = do
    pdstRoiSize <- new dstRoiSize
    pkernelSize <- new kernelSize
    panchor <- new anchor
    r <- ippiFilter_32f_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pKernel pkernelSize panchor
    free pdstRoiSize
    free pkernelSize
    free panchor
    return r

foreign import ccall "ippiFilterColumn_8u_C1Rx"
    ippiFilterColumn_8u_C1Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> Ptr Int32 -> Int -> Int -> Int -> IO CInt
ippiFilterColumn_8u_C1R pSrc srcStep pDst dstStep dstRoiSize pKernel kernelSize yAnchor divisor = do
    pdstRoiSize <- new dstRoiSize
    r <- ippiFilterColumn_8u_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pKernel kernelSize yAnchor divisor
    free pdstRoiSize
    return r

foreign import ccall "ippiFilterColumn_32f_C1Rx"
    ippiFilterColumn_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Ptr Float -> Int -> Int -> IO CInt
ippiFilterColumn_32f_C1R pSrc srcStep pDst dstStep dstRoiSize pKernel kernelSize yAnchor = do
    pdstRoiSize <- new dstRoiSize
    r <- ippiFilterColumn_32f_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pKernel kernelSize yAnchor
    free pdstRoiSize
    return r

foreign import ccall "ippiFilterRow_8u_C1Rx"
    ippiFilterRow_8u_C1Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> Ptr Int32 -> Int -> Int -> Int -> IO CInt
ippiFilterRow_8u_C1R pSrc srcStep pDst dstStep dstRoiSize pKernel kernelSize xAnchor divisor = do
    pdstRoiSize <- new dstRoiSize
    r <- ippiFilterRow_8u_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pKernel kernelSize xAnchor divisor
    free pdstRoiSize
    return r

foreign import ccall "ippiFilterRow_32f_C1Rx"
    ippiFilterRow_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Ptr Float -> Int -> Int -> IO CInt
ippiFilterRow_32f_C1R pSrc srcStep pDst dstStep dstRoiSize pKernel kernelSize xAnchor = do
    pdstRoiSize <- new dstRoiSize
    r <- ippiFilterRow_32f_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pKernel kernelSize xAnchor
    free pdstRoiSize
    return r

foreign import ccall "ippiCrossCorrValid_NormLevel_32f_C1Rx"
    ippiCrossCorrValid_NormLevel_32f_C1Rx :: Ptr Float -> Int -> Ptr IppiSize -> Ptr Float -> Int -> Ptr IppiSize -> Ptr Float -> Int -> IO CInt
ippiCrossCorrValid_NormLevel_32f_C1R pSrc srcStep srcRoiSize pTpl tplStep tplRoiSize pDst dstStep = do
    psrcRoiSize <- new srcRoiSize
    ptplRoiSize <- new tplRoiSize
    r <- ippiCrossCorrValid_NormLevel_32f_C1Rx pSrc srcStep psrcRoiSize pTpl tplStep ptplRoiSize pDst dstStep
    free psrcRoiSize
    free ptplRoiSize
    return r

foreign import ccall "ippiCrossCorrValid_NormLevel_8u32f_C1Rx"
    ippiCrossCorrValid_NormLevel_8u32f_C1Rx :: Ptr Word8 -> Int -> Ptr IppiSize -> Ptr Word8 -> Int -> Ptr IppiSize -> Ptr Float -> Int -> IO CInt
ippiCrossCorrValid_NormLevel_8u32f_C1R pSrc srcStep srcRoiSize pTpl tplStep tplRoiSize pDst dstStep = do
    psrcRoiSize <- new srcRoiSize
    ptplRoiSize <- new tplRoiSize
    r <- ippiCrossCorrValid_NormLevel_8u32f_C1Rx pSrc srcStep psrcRoiSize pTpl tplStep ptplRoiSize pDst dstStep
    free psrcRoiSize
    free ptplRoiSize
    return r

foreign import ccall "ippiCrossCorrValid_NormLevel_8u32f_C3Rx"
    ippiCrossCorrValid_NormLevel_8u32f_C3Rx :: Ptr Word8 -> Int -> Ptr IppiSize -> Ptr Word8 -> Int -> Ptr IppiSize -> Ptr Float -> Int -> IO CInt
ippiCrossCorrValid_NormLevel_8u32f_C3R pSrc srcStep srcRoiSize pTpl tplStep tplRoiSize pDst dstStep = do
    psrcRoiSize <- new srcRoiSize
    ptplRoiSize <- new tplRoiSize
    r <- ippiCrossCorrValid_NormLevel_8u32f_C3Rx pSrc srcStep psrcRoiSize pTpl tplStep ptplRoiSize pDst dstStep
    free psrcRoiSize
    free ptplRoiSize
    return r

foreign import ccall "ippiSqrDistanceValid_Norm_32f_C1Rx"
    ippiSqrDistanceValid_Norm_32f_C1Rx :: Ptr Float -> Int -> Ptr IppiSize -> Ptr Float -> Int -> Ptr IppiSize -> Ptr Float -> Int -> IO CInt
ippiSqrDistanceValid_Norm_32f_C1R pSrc srcStep srcRoiSize pTpl tplStep tplRoiSize pDst dstStep = do
    psrcRoiSize <- new srcRoiSize
    ptplRoiSize <- new tplRoiSize
    r <- ippiSqrDistanceValid_Norm_32f_C1Rx pSrc srcStep psrcRoiSize pTpl tplStep ptplRoiSize pDst dstStep
    free psrcRoiSize
    free ptplRoiSize
    return r

foreign import ccall "ippiSqrDistanceValid_Norm_8u32f_C1Rx"
    ippiSqrDistanceValid_Norm_8u32f_C1Rx :: Ptr Word8 -> Int -> Ptr IppiSize -> Ptr Word8 -> Int -> Ptr IppiSize -> Ptr Float -> Int -> IO CInt
ippiSqrDistanceValid_Norm_8u32f_C1R pSrc srcStep srcRoiSize pTpl tplStep tplRoiSize pDst dstStep = do
    psrcRoiSize <- new srcRoiSize
    ptplRoiSize <- new tplRoiSize
    r <- ippiSqrDistanceValid_Norm_8u32f_C1Rx pSrc srcStep psrcRoiSize pTpl tplStep ptplRoiSize pDst dstStep
    free psrcRoiSize
    free ptplRoiSize
    return r

foreign import ccall "ippiSqrDistanceValid_Norm_8u32f_C3Rx"
    ippiSqrDistanceValid_Norm_8u32f_C3Rx :: Ptr Word8 -> Int -> Ptr IppiSize -> Ptr Word8 -> Int -> Ptr IppiSize -> Ptr Float -> Int -> IO CInt
ippiSqrDistanceValid_Norm_8u32f_C3R pSrc srcStep srcRoiSize pTpl tplStep tplRoiSize pDst dstStep = do
    psrcRoiSize <- new srcRoiSize
    ptplRoiSize <- new tplRoiSize
    r <- ippiSqrDistanceValid_Norm_8u32f_C3Rx pSrc srcStep psrcRoiSize pTpl tplStep ptplRoiSize pDst dstStep
    free psrcRoiSize
    free ptplRoiSize
    return r

foreign import ccall "ippiThreshold_Val_8u_C1Rx"
    ippiThreshold_Val_8u_C1Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> Word8 -> Word8 -> CInt -> IO CInt
ippiThreshold_Val_8u_C1R pSrc srcStep pDst dstStep roiSize threshold value ippCmpOp = do
    proiSize <- new roiSize
    r <- ippiThreshold_Val_8u_C1Rx pSrc srcStep pDst dstStep proiSize threshold value ippCmpOp
    free proiSize
    return r

foreign import ccall "ippiThreshold_Val_32f_C1Rx"
    ippiThreshold_Val_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Float -> Float -> CInt -> IO CInt
ippiThreshold_Val_32f_C1R pSrc srcStep pDst dstStep roiSize threshold value ippCmpOp = do
    proiSize <- new roiSize
    r <- ippiThreshold_Val_32f_C1Rx pSrc srcStep pDst dstStep proiSize threshold value ippCmpOp
    free proiSize
    return r

foreign import ccall "ippiComputeThreshold_Otsu_8u_C1Rx"
    ippiComputeThreshold_Otsu_8u_C1Rx :: Ptr Word8 -> Int -> Ptr IppiSize -> Ptr Word8 -> IO CInt
ippiComputeThreshold_Otsu_8u_C1R pSrc srcStep roiSize pThreshold = do
    proiSize <- new roiSize
    r <- ippiComputeThreshold_Otsu_8u_C1Rx pSrc srcStep proiSize pThreshold
    free proiSize
    return r

foreign import ccall "ippiCopy_8u_C3C1Rx"
    ippiCopy_8u_C3C1Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> IO CInt
ippiCopy_8u_C3C1R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiCopy_8u_C3C1Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiCopy_8u_C1C3Rx"
    ippiCopy_8u_C1C3Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> IO CInt
ippiCopy_8u_C1C3R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiCopy_8u_C1C3Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiCopy_8u_C1Rx"
    ippiCopy_8u_C1Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> IO CInt
ippiCopy_8u_C1R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiCopy_8u_C1Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiCopy_8u_C3Rx"
    ippiCopy_8u_C3Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> IO CInt
ippiCopy_8u_C3R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiCopy_8u_C3Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiCopy_8u_C1MRx"
    ippiCopy_8u_C1MRx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> Ptr Word8 -> Int -> IO CInt
ippiCopy_8u_C1MR pSrc srcStep pDst dstStep roiSize pMask maskStep = do
    proiSize <- new roiSize
    r <- ippiCopy_8u_C1MRx pSrc srcStep pDst dstStep proiSize pMask maskStep
    free proiSize
    return r

foreign import ccall "ippiCopy_32f_C1Rx"
    ippiCopy_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO CInt
ippiCopy_32f_C1R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiCopy_32f_C1Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r
